DIV-8453 | Update dropdown overflow in portal app and textwidgets width to be fixed to 40px

--- a/portal/src/components/CustomTextWidget/index.css
+++ b/portal/src/components/CustomTextWidget/index.css
@@ -2,7 +2,7 @@
     border: 1px solid #E6E6E6;
     border-radius: 4px;
     width: 70%;
-    height: 4vh;
+    height: 40px;
     padding-left: 0.5rem ;
 }
 
