--- a/portal/src/components/PrintCertificate/PrintCertificate.module.css
+++ b/portal/src/components/PrintCertificate/PrintCertificate.module.css
@@ -90,6 +90,7 @@
     border: none;
     text-decoration: underline;
     color: #4CA07A;
+    font-size: 15px;
 }
 
 .iframe-class {
